fix ul: spacing

--- a/client/src/component/shopping-cart/shopping.css
+++ b/client/src/component/shopping-cart/shopping.css
@@ -224,9 +224,7 @@
     border-radius: 0px;
     background-color: inherit;
     overflow: auto;
-    max-height: 600px;
     height: 100%;
-    min-height: 100px;
     list-style-type: none;
 }
 
